# audiobookshelf_czech_metadata

./: .env.example  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.postman/: resources.yaml
app/: __init__.py  config.py  main.py  models.py  openapi.py
docs/: index.html  openapi.json
memory/: agent-workflow.md  albatrosmedia_audioknihy.html  albatrosmedia_search_1984.html  albatrosmedia_search_podzimni_desy.html  albatrosmedia_search_podzimni_desy_agatha_christie.html  alza_search_browserish.html  audioteka_detail_maigretuv_zlodej.html  audioteka_search_maigretuv_zlodej.html  databazeknih_detail_1984.html  databazeknih_home.html  databazeknih_search_1984_guess.html  databazeknih_search_1984_orwell.html  kanopa_detail_hypoteza_zla.html  kanopa_homepage.html  kanopa_search_hypoteza_zla_donato_carrisi.html  knihydobrovsky_audioknihy.html  knihydobrovsky_detail_1984.html  knihydobrovsky_search_1984.html  kosmas_audioknihy.html  kosmas_header.html  kosmas_hledej_1984_live_now.html  kosmas_search_1984_george_orwell.html  kosmas_search_1984_guess1.html  kosmas_search_1984_live_now.html  luxor_api_lang.json  luxor_api_product_category_1984.json  luxor_api_search_1984_assortments.json  luxor_audioknihy.html  luxor_detail_1984.html  luxor_home.html  luxor_main_es2015.js  luxor_scripts.js  megaknihy_audioknihy.html  megaknihy_search_1984.html  megaknihy_search_promena.html  megaknihy_search_query_1984.html  megaknihy_search_sikmy_kostel.html  naposlech-rest-fallback.md  naposlech_api_detail_1984_4_2.json  (+30 more)
(+106 files in other folders)
