[project]
name = "audiolibrix-abs-provider"
version = "0.1.0"
description = "Audiobookshelf custom metadata provider for Audiolibrix Czech storefront."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.9,<3.0",
    "selectolax>=0.3,<1.0",
    "uvicorn>=0.34,<1.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
